# HPCC-Platform

./: CMakeLists.txt
cmake_modules/: commonSetup.cmake
configuration/: CMakeLists.txt
configuration/configurator/: BuildSet.cpp  BuildSet.hpp  CMakeLists.txt  ConfigSchemaHelper.cpp  ConfigSchemaHelper.hpp  ConfiguratorAPI.cpp  ConfiguratorAPI.hpp  ConfiguratorMain.cpp  EnvironmentModel.hpp  JSONMarkUp.cpp  JSONMarkUp.hpp  QMLMarkup.cpp  QMLMarkup.hpp  SchemaAnnotation.cpp  SchemaAnnotation.hpp  SchemaAttributeGroup.cpp  SchemaAttributeGroup.hpp  SchemaAttributes.cpp  SchemaAttributes.hpp  SchemaChoice.cpp  SchemaChoice.hpp  SchemaCommon.cpp  SchemaCommon.hpp  SchemaComplexContent.cpp  SchemaComplexContent.hpp  SchemaComplexType.cpp  SchemaComplexType.hpp  SchemaElement.cpp  SchemaElement.hpp  SchemaEnumeration.cpp  SchemaEnumeration.hpp  SchemaExtension.cpp  SchemaField.hpp  SchemaFractionDigits.hpp  SchemaInclude.cpp  SchemaInclude.hpp  SchemaKey.cpp  SchemaKey.hpp  SchemaKeyRef.cpp  SchemaKeyRef.hpp  (+15 more)
configuration/configurator_ui/: ConfiguratorUI.hpp
deployment/: CMakeLists.txt
deployment/configgen/: main.cpp
deployment/configurator/: .CMakeLists.txt.swo  BuildSet.cpp  BuildSet.hpp  CMakeLists.txt  ConfigSchemaHelper.cpp  ConfigSchemaHelper.hpp  ConfiguratorAPI.cpp  ConfiguratorAPI.hpp  ConfiguratorMain.cpp  ConfiguratorMain.hpp  EnvironmentModel.cpp  EnvironmentModel.hpp  ExceptionStrings.cpp  ExceptionStrings.hpp  Main.cpp  QMLMarkup.cpp  QMLMarkup.hpp  SchemaAnnotation.cpp  SchemaAnnotation.hpp  SchemaAppInfo.cpp  SchemaAppInfo.hpp  SchemaAttributeGroup.cpp  SchemaAttributeGroup.hpp  SchemaAttributes.cpp  SchemaAttributes.hpp  SchemaChoice.cpp  SchemaChoice.hpp  SchemaCommon.hpp  SchemaComplexContent.cpp  SchemaComplexContent.hpp  SchemaComplexType.cpp  SchemaComplexType.hpp  SchemaDocumentation.cpp  SchemaDocumentation.hpp  SchemaElement.cpp  SchemaElement.hpp  SchemaEnumeration.cpp  SchemaEnumeration.hpp  SchemaExtension.cpp  SchemaExtension.hpp  (+14 more)
deployment/configurator_app/: Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  configurator_app.files  configurator_app.includes  configurator_app.pro
deployment/configurator_app/ConfiguratorApp/: ConfiguratorApp.pro  MainWindow.ui
deployment/configurator_ui/: AppData.cpp  AppData.hpp  ConfiguratorUI.cpp  ConfiguratorUI.files  ConfiguratorUI.pro  ConfiguratorUIDynamic.pro  ConfiguratorUIStatic.pro  appdata.hpp  configuratorui.cpp  configuratorui.hpp
deployment/configurator_utils/: Notes.txt  demo1.xml  makeDocs.sh
deployment/deploy/: XMLTags.h
deployment/deployutils/: deployutils.cpp  deployutils.hpp  wizardInputs.cpp
deployment/envgen/: main.cpp
ecl/hql/: hqlatoms.cpp  hqlatoms.hpp  hqlfold.cpp  hqlgram.y  hqllex.l
ecl/hqlcpp/: hqlcatom.hpp  hqlcpp.cpp  hqlcpp.ipp
ecllibrary/std/: CMakeLists.txt  Random.ecl
esp/files/scripts/configmgr/: configmgr.js  navtree.js
esp/scm/: WsDeploy.ecm  additional.cmake  ws_configurator.ecm
esp/services/: CMakeLists.txt
esp/services/WsDeploy/: WsDeployService.cpp  WsDeployService.hpp
esp/services/ws_configurator/: CMakeLists.txt  ws_configurator.cpp  ws_configurator.hpp  wsconfigurator.hpp
esp/src/eclwatch/: DynamicESDLDetailsWidget.js  DynamicESDLMethodWidget.js  DynamicESDLQueryWidget.js  TargetSelectClass.js
esp/src/eclwatch/nls/: hpcc.js
esp/src/eclwatch/templates/: DynamicESDLDetailsWidget.html
initfiles/componentfiles/configxml/: Environment.xsd  cgencomplist_linux.xml  dafilesrv.xsd  dali.xsd  eclscheduler.xsl  environment.xsd  esp.xsd.in  esp.xsl  roxie.xsd.in  thor.xsd.in
initfiles/componentfiles/configxml/@temp/: esp_service_WsSMC.xsl
plugins/: CMakeLists.txt
plugins/pseudorandomlib/: CMakeLists.txt  pseudorandomlib.cpp  pseudorandomlib.hpp
plugins/pseudorandomplugin/: CMakeLists.txt  pseudorandomplugin.cpp  pseudorandomplugin.hpp
plugins/randomlib/: CMakeLists.txt  randomlib.cpp  randomlib.hpp
plugins/randomplugin/: CMakeLists.txt  lib_randomplugin.ecllib  randomplugin.cpp  randomplugin.hpp
rtl/eclrtl/: eclrtl.cpp
system/jlib/: jfile.cpp  jfile.ipp  jutil.cpp
system/security/LdapSecurity/: ldapconnection.cpp  ldapsecurity.cpp
system/xmllib/: xsdparser.cpp
